tests/baselines/reference/errorMessagesIntersectionTypes04.errors.txt
tests/cases/compiler/errorMessagesIntersectionTypes04.ts(17,5): error TS2322: Type 'A & B' is not assignable to type '数字'.
tests/cases/compiler/errorMessagesIntersectionTypes04.ts(18,5): error TS2322: Type 'A & B' is not assignable to type '真假'.
tests/cases/compiler/errorMessagesIntersectionTypes04.ts(19,5): error TS2322: Type 'A & B' is not assignable to type '文字'.
tests/cases/compiler/errorMessagesIntersectionTypes04.ts(21,5): error TS2322: Type '(数字 & 为真) | (数字 & 为假)' is not assignable to type '文字'.
  Type '数字 & 为真' is not assignable to type '文字'.


==== tests/cases/compiler/errorMessagesIntersectionTypes04.ts (4 errors) ====
    interface A {
        a;
    }
    
    interface B {
        b;
    }
    
    function f<T, U extends A, V extends U>(): void {
        let num: number;
        let bool: boolean;
        let str: string;
    
        let a_and_b: A & B;
        let num_and_bool: number & boolean;
    
        num = a_and_b;
        ~~~
!!! error TS2322: Type 'A & B' is not assignable to type '数字'.
        bool = a_and_b;
        ~~~~
!!! error TS2322: Type 'A & B' is not assignable to type '真假'.
        str = a_and_b;
        ~~~
!!! error TS2322: Type 'A & B' is not assignable to type '文字'.
    
        str = num_and_bool;
        ~~~
!!! error TS2322: Type '(数字 & 为真) | (数字 & 为假)' is not assignable to type '文字'.
!!! error TS2322:   Type '数字 & 为真' is not assignable to type '文字'.
    }